return and borrow func with validation
