# domain/book/model/req.go
@@ -1,0 +1,7 @@
+package model
+
+type OrderReq struct {
+	MemberCode string `form:"member_code"`
+	BookCode   string `form:"book_code"`
+	Status     string `form:"status"`
+}
